Fix scrollbar appearing in certain circumstances by using position: fixed; on the body.

--- a/stylesheets/common.css
+++ b/stylesheets/common.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+body {
+  position: fixed;
+}
+
 body .light, .light, .light #Chat-Screen, .light #settingsScreen, .light #reconnectingScreen, .light #Message-Box, .light #serverListIcon {
   background-color: #fff;
   color: #212529
